fix: padding card tanggapan in desktop view

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -299,6 +299,9 @@ a.btn.btn-lapor:active {
     .page-content .row .col-12 .row .col-6:last-child .card .card-body {
         padding: 2rem 0.8rem !important;
     }
+    .page-content .row .col-12 .row .col-6:nth-child(2) .card .card-body {
+        padding: 2rem 0.8rem !important;
+    }
 }
 @media only screen and (min-width: 373px) and (max-width: 430px) {
     .margin-form {
@@ -523,6 +526,9 @@ a.btn.btn-lapor:active {
         font-weight: bold;
         font-size: 17px;
         line-height: 97.39%;
+    }
+    .page-content .row .col-12 .row .col-6:last-child .card .card-body {
+        padding: 2rem 0.5rem !important;
     }
 }
 @media only screen and (min-width: 1440px) and (max-width: 1699px) {
